--- a/godtools/Views/GTHomeViewCell.xib
+++ b/godtools/Views/GTHomeViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -14,12 +15,12 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IOb-6t-RhA" id="xhQ-1F-7kA">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="poS-Zh-dm8">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="poS-Zh-dm8">
                         <rect key="frame" x="10" y="6" width="35" height="35"/>
                         <constraints>
+                            <constraint firstAttribute="width" constant="35" id="IWx-XZ-4gd"/>
                             <constraint firstAttribute="width" secondItem="poS-Zh-dm8" secondAttribute="height" multiplier="1:1" id="SFN-rJ-OYG"/>
                             <constraint firstAttribute="width" secondItem="poS-Zh-dm8" secondAttribute="height" multiplier="1:1" id="fPc-8u-V7o"/>
-                            <constraint firstAttribute="width" secondItem="poS-Zh-dm8" secondAttribute="height" multiplier="1:1" id="yjb-fN-MbP"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -28,14 +29,17 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
                         <rect key="frame" x="53" y="6" width="257" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="live" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bb5-1O-xtc">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="live" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bb5-1O-xtc">
                         <rect key="frame" x="53" y="20" width="66" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="66" id="srf-j8-ydf"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.27871890943877553" green="0.27871890943877553" blue="0.27871890943877553" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -43,9 +47,16 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="5" id="F9N-xo-k9E"/>
-                    <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leading" constant="10" id="JAZ-3I-9X2"/>
-                    <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="5" id="Z7J-fX-poq"/>
-                    <constraint firstAttribute="bottom" secondItem="poS-Zh-dm8" secondAttribute="bottom" constant="5" id="aYS-Y2-9xf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="UeF-AY-tJc" secondAttribute="trailing" constant="2" id="IBd-Pq-FaR"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leadingMargin" constant="2" id="Iji-FJ-ett"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="-2" id="Ivc-y0-ZRX"/>
+                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="12" id="Qoq-S2-crG"/>
+                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="bottom" secondItem="poS-Zh-dm8" secondAttribute="bottom" id="bFf-sE-VFg"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="UeF-AY-tJc" secondAttribute="bottom" constant="9" id="iKy-bM-TIl"/>
+                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="UeF-AY-tJc" secondAttribute="leading" id="mi6-gp-oFj"/>
+                    <constraint firstItem="UeF-AY-tJc" firstAttribute="top" secondItem="poS-Zh-dm8" secondAttribute="top" id="pVS-RI-5Fw"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="poS-Zh-dm8" secondAttribute="bottom" constant="-6" id="pta-u9-j0f"/>
+                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" symbolic="YES" id="w5h-Ot-TyK"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
